--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
 <head></head>
 <body>
+  <div class="content">
+    <input type="text" maxlength="12" name="value" id='value'>
+    <input type="button" value="submit" onclick="makeMeASandwich(myIngredients)">
+  </div>
   <script src="sandwich.js"></sript>
-  <input type="text" maxlength="12" name="value" id='value'>
-  <input type="button" value="submit" onclick="sandwichMaker()">
 </body>
 </html>
